Rmoving the padding-left from the flex-header to prevent wrapping

--- a/docs/css/global-style.css
+++ b/docs/css/global-style.css
@@ -182,7 +182,6 @@ a.no-underline :hover {
 
 .front .flex-header {
   color: #ffffff;
-  padding-left: 0.4em;
   text-shadow: none;
 }
 
